shell/app/yml-chart/chart/yml-chart.scss
.yml-svg-container-box {
  overflow-x: auto;
  overflow-y: hidden;
  background-image: url(/images/editor-background.png);
  background-repeat: repeat;
  background-size: 100%;
}

.yml-svg-container {
  position: relative;
  min-width: 100%;
  min-height: 100%;

  &.editing {
    min-height: calc(100% - 210px);
  }

  .svg-model-node-carrier {
    overflow: visible;

    &.hidden {
      visibility: hidden;
    }

    &.show {
      visibility: visible;
    }
  }
}

